# pulumi-fivetran

./: .gitignore  .golangci.yml  .goreleaser.yml  .miserc.toml  .upgrade-config.yml  Makefile  PLAN.md  README.md  claude.md  go.work  go.work.sum  hk.pkl  mise.ci.toml  mise.dev.toml  mise.toml
sdk/python/: Pulumi.yaml  README.md  pyproject.toml  setup.py
sdk/python/pulumi_fivetran/: README.md  __init__.py  _inputs.py  _utilities.py  connector.py  connector_certificates.py  connector_fingerprints.py  connector_schedule.py  connector_schema_config.py  dbt_project.py  dbt_transformation.py  destination.py  destination_certificates.py  destination_fingerprints.py  external_logging.py  fivetran_connector.py  fivetran_connector_dbt_project.py  fivetran_connector_dbt_transformation.py  fivetran_connector_destination.py  fivetran_connector_group.py  fivetran_connector_group_users.py  fivetran_connector_schedule.py  fivetran_connector_schema_config.py  fivetran_connector_user.py  fivetran_connector_webhook.py  get_connector.py  get_connector_certificates.py  get_connector_fingerprints.py  get_connectors_metadata.py  get_dbt_models.py  get_dbt_project.py  get_dbt_projects.py  get_dbt_transformation.py  get_destination.py  get_destination_certificates.py  get_destination_fingerprints.py  get_external_logging.py  get_group.py  get_group_connectors.py  get_group_users.py  (+30 more)
sdk/python/pulumi_fivetran.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/python/pulumi_provider_fivetran/: README.md  __init__.py  _inputs.py  _utilities.py  connection.py  connection_config.py  (+85 more)
(+728 files in other folders)
